--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
                     <li class="header-mainlist-sites"><a class="header-link" href="./">Контакти</a></li>
                 </ul>
             </nav>
-            <a href="/." target="_blank" rel="noreferrer noopener">info@devstudio.com</a>
-            <p>+38 096 111 11 11</p>
+            <ul class="list">
+                <li class="item"><a class="gmail" href="//">info@devstudio.com</a></li>
+                <li class="item">
+                    <p>+38 096 111 11 11</p>
+                </li>
+            </ul>
         </div>
-
     </header>
     <main class="main">
         <section class="hero">
@@ -37,80 +40,92 @@
                     <h1 class="section-h1">Ефективні рішення для вашого бізнесу</h1>
                     <button class="button" type="button">Замовити послугу</button>
                 </section>
+            </div>
         </section>
-        </div>
-        <ul class="ourwork">
-            <li class="item">
-                <h3 class="ourwork-atention">УВАГА ДО ДЕТАЛЕЙ</h3>
-                <p class="list-p">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-            </li>
-            <li class="item">
-                <h3 class="ourwork-atention">ПУНКТУАЛЬНІСТЬ</h3>
-                <p class="list-p">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-            </li>
-            <li class="item">
-                <h3 class="ourwork-atention">ПЛАНУВАННЯ</h3>
-                <p class="list-p">Так само консультація з широким активом значною мірою зумовлює.</p>
-            </li>
-            <li class="item">
-                <h3 class="ourwork-atention">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p class="list-p">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-            </li>
-        </ul>
+        <section class="section-ourwork">
+            <div class="conteiner">
+                <ul class="ourwork">
+                    <li class="item">
+                        <h3 class="ourwork-atention">УВАГА ДО ДЕТАЛЕЙ</h3>
+                        <p class="list-p">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                        </p>
+                    </li>
+                    <li class="item">
+                        <h3 class="ourwork-atention">ПУНКТУАЛЬНІСТЬ</h3>
+                        <p class="list-p">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    </li>
+                    <li class="item">
+                        <h3 class="ourwork-atention">ПЛАНУВАННЯ</h3>
+                        <p class="list-p">Так само консультація з широким активом значною мірою зумовлює.</p>
+                    </li>
+                    <li class="item">
+                        <h3 class="ourwork-atention">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                        <p class="list-p">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="images">
-            <h3 class="images-ourjob">Чим ми займаємося</h3>
-            <ul class="list">
-                <li class="item">
-                    <img src="./images/img.jpg" alt="програмування">
-                </li>
-                <li class="item">
-                    <img src="./images/img-2.jpg" alt="дизайн">
-                </li>
-                <li class="item">
-                    <img src="./images/img-3.jpg" alt="оформлення">
-                </li>
-            </ul>
+            <div class="conteiner">
+                <h3 class="images-ourjob">Чим ми займаємося</h3>
+                <ul class="list">
+                    <li class="item">
+                        <img src="./images/img.jpg" alt="програмування">
+                    </li>
+                    <li class="item">
+                        <img src="./images/img-2.jpg" alt="дизайн">
+                    </li>
+                    <li class="item">
+                        <img src="./images/img-3.jpg" alt="оформлення">
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="workers">
-            <h2 class="workers-h2">Наша команда</h2>
-            <ul class="list">
-                <li class="workers-h2-item">
-                    <img src="./images/img-44.jpg" alt="Ігор">
-                    <p class="workers-p">Ігор Дем'яненко</p>
-                    <h3 class="underworkers">Product Designer</h3>
-                </li>
-                <li class="workers-h2-item">
-                    <img src="./images/img-41.jpg" alt="Ольга">
-                    <p class="workers-p">Ольга Рєпіна</p>
-                    <h3 class="underworkers">Frontend Developer</h3>
-                </li>
-                <li class="workers-h2-item">
-                    <img src="./images/img-22.jpg" alt="Микола">
-                    <p class="workers-p">Микола Тарасов</p>
-                    <h3 class="underworkers">Marketing</h3>
-                </li>
-                <li class="workers-h2-item">
-                    <img src="./images/img-33.jpg" alt="Михайло">
-                    <p class="workers-p">Михайло Єрмаков</p>
-                    <h3 class="underworkers">UI Designer</h3>
-                </li>
-            </ul>
+            <div class="conteiner">
+                <h2 class="workers-h2">Наша команда</h2>
+                <ul class="list">
+                    <li class="workers-h2-item">
+                        <img src="./images/img-44.jpg" alt="Ігор">
+                        <p class="workers-p">Ігор Дем'яненко</p>
+                        <h3 class="underworkers">Product Designer</h3>
+                    </li>
+                    <li class="workers-h2-item">
+                        <img src="./images/img-41.jpg" alt="Ольга">
+                        <p class="workers-p">Ольга Рєпіна</p>
+                        <h3 class="underworkers">Frontend Developer</h3>
+                    </li>
+                    <li class="workers-h2-item">
+                        <img src="./images/img-22.jpg" alt="Микола">
+                        <p class="workers-p">Микола Тарасов</p>
+                        <h3 class="underworkers">Marketing</h3>
+                    </li>
+                    <li class="workers-h2-item">
+                        <img src="./images/img-33.jpg" alt="Михайло">
+                        <p class="workers-p">Михайло Єрмаков</p>
+                        <h3 class="underworkers">UI Designer</h3>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a class="logo" href="/">Web<span class="logoblack">Studio</span></a>
-        <ul>
-            <li>
-                <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
-            </li>
-            <li>
-                <a href="/." target="_blank" rel="noreferrer noopener">info@devstudio.com</a>
-            </li>
-            <li>
-                <p>+38 096 111 11 11</p>
-            </li>
-        </ul>
+        <section class="footer-section">
+            <div class="conteiner">
+                <a class="logo" href="/">Web<span class="logoblack">Studio</span></a>
+                <ul class="link">
+                    <li class="item">
+                        <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
+                    </li>
+                    <li class="item">
+                        <a href="/." target="_blank" rel="noreferrer noopener">info@devstudio.com</a>
+                    </li>
+                    <li class="item">
+                        <p>+38 096 111 11 11</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </footer>
 </body>
 
