--- a/portfolio.html
+++ b/portfolio.html
@@ -14,22 +14,25 @@
 
 <body>
     <header class="header">
-        <div class="conteiner">
-            <a class="logo" href="/">Web<span class="logoblack">Studio</span></a>
-            <nav class="conteiner-nav">
-                <ul class="header-list">
-                    <li class="header-list-item"><a class="header-link" href="./index.html">Студія</a></li>
-                    <li class="header-list-item"><a class="header-link active-link"
-                            href="./portfolio.html">Портфоліо</a>
+        <section class="header-section">
+            <div class="conteiner">
+                <a class="logo" href="/">Web<span class="logoblack">Studio</span></a>
+                <nav class="conteiner-nav">
+                    <ul class="header-list">
+                        <li class="header-list-item"><a class="header-link" href="./index.html">Студія</a></li>
+                        <li class="header-list-item"><a class="header-link active-link"
+                                href="./portfolio.html">Портфоліо</a></li>
+                        <li class="header-list-item"><a class="header-link" href="./">Контакти</a></li>
+                    </ul>
+                </nav>
+                <ul class="list">
+                    <li class="item"><a class="gmail" href="//">info@devstudio.com</a></li>
+                    <li class="item">
+                        <p>+38 096 111 11 11</p>
                     </li>
-                    <li class="header-list-item"><a class="header-link" href="./">Контакти</a></li>
                 </ul>
-            </nav>
-            <ul>
-                <a href="/." target="_blank" rel="noreferrer noopener">info@devstudio.com</a>
-                <p>+38 096 111 11 11</p>
-            </ul>
-        </div>
+            </div>
+        </section>
     </header>
     <main>
         <section class="all">
