--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header">
         <div class="conteiner">
-            <a class="logo" href="/">Web<span class="logoblack">Studio</span></a>
+            <a class="conteiner-logo" href="/">Web<span class="conteiner-logo-black">Studio</span></a>
             <nav class="header-conteiner-nav">
                 <ul class="header-mainlist">
                     <li class="header-mainlist-sites"><a class="header-link active-link" href="./index.html">Студія</a>
@@ -25,10 +25,10 @@
                     <li class="header-mainlist-sites"><a class="header-link" href="./">Контакти</a></li>
                 </ul>
             </nav>
-            <ul class="list">
-                <li class="item"><a class="gmail" href="//">info@devstudio.com</a></li>
-                <li class="item">
-                    <a class="phone-number" href="///">+38 096 111 11 11</a>
+            <ul class="conteiner-list">
+                <li class="conteiner-list-item"><a class="gmail" href="##">info@devstudio.com</a></li>
+                <li class="conteiner-list-item">
+                    <a class="phone-number" href="#">+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -36,7 +36,7 @@
     <main class="main">
         <section class="hero">
             <div class="conteiner">
-                <section class="section">
+                <section class="conteiner-section">
                     <h1 class="section-h1">Ефективні рішення для вашого бізнесу</h1>
                     <button class="button" type="button">Замовити послугу</button>
                 </section>
@@ -44,21 +44,21 @@
         </section>
         <section class="section-ourwork">
             <div class="conteiner">
-                <ul class="ourwork">
-                    <li class="item">
-                        <h3 class="ourwork-atention">УВАГА ДО ДЕТАЛЕЙ</h3>
+                <ul class="conteiner-ourwork">
+                    <li class="conteiner-ourwork-item">
+                        <h3 class="conteiner-ourwork-atention">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="list-p">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                         </p>
                     </li>
-                    <li class="item">
+                    <li class="conteiner-ourwork-item">
                         <h3 class="ourwork-atention">ПУНКТУАЛЬНІСТЬ</h3>
                         <p class="list-p">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
-                    <li class="item">
+                    <li class="conteiner-ourwork-item">
                         <h3 class="ourwork-atention">ПЛАНУВАННЯ</h3>
                         <p class="list-p">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li class="item">
+                    <li class="conteiner-ourwork-item">
                         <h3 class="ourwork-atention">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                         <p class="list-p">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
@@ -112,7 +112,7 @@
     <footer class="footer">
         <section class="footer-section">
             <div class="conteiner">
-                <a class="logo" href="/">Web<span class="logoblack">Studio</span></a>
+                <a class="conteiner-logo" href="/">Web<span class="conteiner-logo-white">Studio</span></a>
                 <ul class="link">
                     <li class="item">
                         <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
@@ -122,7 +122,7 @@
                             rel="noreferrer noopener">info@devstudio.com</a>
                     </li>
                     <li class="item">
-                        <a class="footer-phone-number" href="///">+38 096 111 11 11</a>
+                        <a class="footer-phone-number" href="#">+38 096 111 11 11</a>
                     </li>
                 </ul>
             </div>
