--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <header class="header">
         <section class="header-section">
             <div class="conteiner">
-                <a class="logo" href="/">Web<span class="logoblack">Studio</span></a>
+                <a class="conteiner-logo" href="/">Web<span class="conteiner-logo-black">Studio</span></a>
                 <nav class="conteiner-nav">
                     <ul class="header-list">
                         <li class="header-list-item"><a class="header-link" href="./index.html">Студія</a></li>
@@ -26,9 +26,9 @@
                     </ul>
                 </nav>
                 <ul class="list">
-                    <li class="item"><a class="gmail" href="//">info@devstudio.com</a></li>
+                    <li class="item"><a class="gmail" href="##">info@devstudio.com</a></li>
                     <li class="item">
-                        <a class="phone-number" href="///">+38 096 111 11 11</a>
+                        <a class="phone-number" href="#">+38 096 111 11 11</a>
                     </li>
                 </ul>
             </div>
@@ -52,50 +52,51 @@
                 <li class="item">
                     <a href="./">Маркетинг</a>
                 </li>
+            </ul>
         </section>
         <section class="works">
             <ul class="list">
-                <li class="item">
+                <li class="list-item">
                     <img src="./images-portfolio/img.jpg" alt="технокряк">
                     <h2 class="item-nameofsite">Технокряк</h2>
                     <p class="item-nameofsite-portfoli">Веб-сайт</p>
                 </li>
-                <li class="item">
+                <li class="list-item">
                     <img src="./images-portfolio/img-2.jpg" alt="Постер New Orlean vs Golden Star">
                     <h2 class="item-nameofsite">Постер New Orlean vs Golden Star</h2>
                     <p class="item-nameofsite-portfoli">Дизайн</p>
                 </li>
-                <li class="item">
+                <li class="list-item">
                     <img src="./images-portfolio/img-3.jpg" alt="Ресторан Seafood">
                     <h2 class="item-nameofsite">Ресторан Seafood</h2>
                     <p class="item-nameofsite-portfoli">Додаток</p>
                 </li>
-                <li class="item">
+                <li class="list-item">
                     <img src="./images-portfolio/img-4.jpg" alt="Проєкт Prime">
                     <h2 class="item-nameofsite">Проєкт Prime</h2>
                     <p class="item-nameofsite-portfoli">Маркетинг</p>
                 </li>
-                <li class="item">
+                <li class="list-item">
                     <img src="./images-portfolio/img-5.jpg" alt="Проєкт Boxes">
                     <h2 class="item-nameofsite">Проєкт Boxes</h2>
                     <p class="item-nameofsite-portfoli">Додаток</p>
                 </li>
-                <li class="item">
+                <li class="list-item">
                     <img src="./images-portfolio/img-6.jpg" alt="Inspiration has no Borders">
                     <h2 class="item-nameofsite">Inspiration has no Borders</h2>
                     <p class="item-nameofsite-portfoli">Веб-сайт</p>
                 </li>
-                <li class="item">
+                <li class="list-item">
                     <img src="./images-portfolio/img-7.jpg" alt="Видання Limited Edition">
                     <h2 class="item-nameofsite">Видання Limited Edition</h2>
                     <p class="item-nameofsite-portfoli">Дизайн</p>
                 </li>
-                <li class="item">
+                <li class="list-item">
                     <img src="./images-portfolio/img-8.jpg" alt="Проєкт LAB">
                     <h2 class="item-nameofsite">Проєкт LAB</h2>
                     <p class="item-nameofsite-portfoli">Маркетинг</p>
                 </li>
-                <li class="item">
+                <li class="list-item">
                     <img src="./images-portfolio/img-9.jpg" alt="Growing Business">
                     <h2 class="item-nameofsite">Growing Business</h2>
                     <p class="item-nameofsite-portfoli">Додаток</p>
@@ -104,7 +105,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="logo" href="/">Web<span class="logoblack">Studio</span></a>
+        <a class="conteiner-logo" href="/">Web<span class="conteiner-logo-white">Studio</span></a>
         <ul>
             <li>
                 <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
@@ -113,7 +114,7 @@
                 <a class="footer-link" href="/." target="_blank" rel="noreferrer noopener">info@devstudio.com</a>
             </li>
             <li>
-                <a class="phone-number" href="///">+38 096 111 11 11</a>
+                <a class="phone-number" href="#">+38 096 111 11 11</a>
             </li>
         </ul>
     </footer>
