--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700;900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header class="header">
         <div class="conteiner">
-            <a class="conteiner-logo" href="/">Web<span class="conteiner-logo-black">Studio</span></a>
+            <a class="header-logo" href="/">Web<span class="header-logo-black">Studio</span></a>
             <nav class="header-conteiner-nav">
                 <ul class="header-mainlist">
                     <li class="header-mainlist-sites"><a class="header-link active-link" href="./index.html">Студія</a>
@@ -25,10 +27,10 @@
                     <li class="header-mainlist-sites"><a class="header-link" href="./">Контакти</a></li>
                 </ul>
             </nav>
-            <ul class="conteiner-list">
-                <li class="conteiner-list-item"><a class="gmail" href="##">info@devstudio.com</a></li>
-                <li class="conteiner-list-item">
-                    <a class="phone-number" href="#">+38 096 111 11 11</a>
+            <ul class="header-list">
+                <li class="header-list-li"><a class="gmail hover" href="./">info@devstudio.com</a></li>
+                <li class="header-list-li">
+                    <a class="phone-number hover" href="./">+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -36,7 +38,7 @@
     <main class="main">
         <section class="hero">
             <div class="conteiner">
-                <section class="conteiner-section">
+                <section class="hero-section">
                     <h1 class="section-h1">Ефективні рішення для вашого бізнесу</h1>
                     <button class="button" type="button">Замовити послугу</button>
                 </section>
@@ -44,21 +46,21 @@
         </section>
         <section class="section-ourwork">
             <div class="conteiner">
-                <ul class="conteiner-ourwork">
-                    <li class="conteiner-ourwork-item">
+                <ul class="conteiner_ourwork">
+                    <li class="conteiner-ourwork-li">
                         <h3 class="conteiner-ourwork-atention">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="list-p">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                         </p>
                     </li>
-                    <li class="conteiner-ourwork-item">
+                    <li class="conteiner-ourwork-li">
                         <h3 class="ourwork-atention">ПУНКТУАЛЬНІСТЬ</h3>
                         <p class="list-p">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
-                    <li class="conteiner-ourwork-item">
+                    <li class="conteiner-ourwork-li">
                         <h3 class="ourwork-atention">ПЛАНУВАННЯ</h3>
                         <p class="list-p">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li class="conteiner-ourwork-item">
+                    <li class="conteiner-ourwork-li">
                         <h3 class="ourwork-atention">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                         <p class="list-p">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
@@ -112,17 +114,17 @@
     <footer class="footer">
         <section class="footer-section">
             <div class="conteiner">
-                <a class="conteiner-logo" href="/">Web<span class="conteiner-logo-white">Studio</span></a>
+                <a class="header-logo" href="/">Web<span class="footer-logo-white">Studio</span></a>
                 <ul class="link">
                     <li class="item">
                         <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
                     </li>
                     <li class="item">
-                        <a class="footer-link" href="/." target="_blank"
+                        <a class="footer-link" href="./" target="_blank"
                             rel="noreferrer noopener">info@devstudio.com</a>
                     </li>
                     <li class="item">
-                        <a class="footer-phone-number" href="#">+38 096 111 11 11</a>
+                        <a class="footer-phone-number" href="./">+38 096 111 11 11</a>
                     </li>
                 </ul>
             </div>
